# SFMLProject

./: CMakeLists.txt  readme.md
components/: animation.cpp  animation.h  animationController.cpp  animationController.h  mouvement.cpp  mouvement.h
config/: keybinds.ini  supportedkeys.ini  window.ini
entities/: entity.cpp  entity.h  player.cpp  player.h
include/: game.h  state.h
ressources/: button.cpp  button.h
src/: game.cpp  main.cpp  state.cpp
states/: gamestate.cpp  gamestate.h  mainmenustate.cpp  mainmenustate.h  state.cpp  state.h
